[gd_scene load_steps=9 format=3 uid="uid://cu7n8tkscpjto"]

[ext_resource type="Script" path="res://NewMovie/new_movie.gd" id="1_3npgm"]
[ext_resource type="Theme" uid="uid://cepf0eeqt2mpk" path="res://UI/Themes/my_spinbox_theme.tres" id="1_q5mtx"]
[ext_resource type="Texture2D" uid="uid://ck22lg7ds7ovc" path="res://UI/Images/text_input.png" id="1_v2b04"]
[ext_resource type="Theme" uid="uid://7ug4svgqw7bl" path="res://UI/Themes/my_header_label_theme.tres" id="2_iob5s"]
[ext_resource type="Theme" uid="uid://56nx8cnihqa2" path="res://UI/Themes/my_line_edit_theme.tres" id="2_trad1"]
[ext_resource type="Theme" uid="uid://bio0np2bdwycd" path="res://UI/Themes/my_label_theme.tres" id="3_j5kc6"]
[ext_resource type="Theme" uid="uid://wgr8ngf3t34r" path="res://UI/Themes/my_button_theme.tres" id="7_8krvt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4vnk1"]

[node name="NewMovie" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3npgm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 190.0
grow_horizontal = 2
theme = ExtResource("2_iob5s")
text = "New Movie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -604.0
offset_top = 250.0
offset_right = 604.0
offset_bottom = 350.0
grow_horizontal = 2
theme_override_constants/separation = 52

[node name="MovieNameInputBackground" type="TextureRect" parent="Background/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
texture = ExtResource("1_v2b04")

[node name="MovieNameInput" type="LineEdit" parent="Background/HBoxContainer/MovieNameInputBackground"]
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 381.0
offset_bottom = 85.0
theme = ExtResource("2_trad1")
placeholder_text = "Enter Movie Name..."

[node name="PriorityContainer" type="HBoxContainer" parent="Background/HBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_constants/separation = 30

[node name="PriorityLabel" type="Label" parent="Background/HBoxContainer/PriorityContainer"]
layout_mode = 2
theme = ExtResource("3_j5kc6")
text = "Priority"

[node name="PrioritySpinBox" type="SpinBox" parent="Background/HBoxContainer/PriorityContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("1_q5mtx")

[node name="MovieColorContainer" type="PanelContainer" parent="Background/HBoxContainer"]
custom_minimum_size = Vector2(320, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4vnk1")

[node name="MovieColorLabel" type="Label" parent="Background/HBoxContainer/MovieColorContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_j5kc6")
text = "Movie Color:"

[node name="MovieColorPicker" type="ColorPickerButton" parent="Background/HBoxContainer/MovieColorContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
color = Color(0.00392157, 0.682353, 0.682353, 1)

[node name="ErrorLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -156.0
offset_right = 500.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AddMovieButton" type="Button" parent="Background"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396
anchor_top = 0.454
anchor_right = 0.604
anchor_bottom = 0.546
offset_left = -0.320068
offset_top = -0.320038
offset_right = 0.319946
offset_bottom = 0.320007
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_8krvt")
text = "Add Movie"

[connection signal="pressed" from="Background/AddMovieButton" to="." method="_on_add_movie_button_pressed"]
